⭐ Refactoring and fix
