# src/dtos/index.ts
@@ -1,0 +1,3 @@
+export * from "./Logs";
+export * from "./SearchResponse";
+export * from "./DiscordUserResponse";
